--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "snowpack dev",
+    "build": "snowpack build",
     "test": "react-scripts test"
   },
   "author": "",
@@ -28,6 +29,13 @@
     }
   },
   "devDependencies": {
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7"
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/preset-env": "^7.12.17",
+    "@snowpack/plugin-babel": "^2.1.6",
+    
+    "@snowpack/plugin-webpack": "^3.0.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
+    "babel-loader": "^8.2.2",
+    "snowpack": "^3.8.8"
   }
 }
